<resources>
    <string name="app_name">Repair Tag</string>
    <string name="app_name_home">Repair Tag: Home</string>
    <string name="app_name_info">Repair Tag: Info</string>
    <string name="app_name_settings">Repair Tag: Settings</string>
    <string name="app_name_search">Repair Tag: Search</string>
    <string name="app_name_print">Repair Tag: Print</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_name">Midstate Music of CNY Inc. (2018)</string>

    <string name="pin_title">Enter your 4-digit employee pin to continue.</string>

    <string name="main_title">to the Midstate Music Repair Tag App!</string>
    <string name="main_instructions">Press the upper left icon or swipe from the left to view the menu. From here you can create, edit, or print a repair tag. You can also press the icon in the
        lower right hand corner to create a new repair tag. </string>

    <string name="action_home">Home</string>
    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_print">Print</string>
    <string name="action_configure">Configure</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="action_customer">Customer</string>
    <string name="action_school">School</string>
    <string name="action_instrument">Instrument</string>
    <string name="action_description">Description</string>
    <string name="title_activity_pin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="status_array">
        <item>Pending</item>
        <item>Completed</item>
        <item>Paid</item>
    </string-array>

</resources>
