<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@mipmap/ic_edit_black_24dp"
            android:title="@string/action_create" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_edit" />
        <item
            android:id="@+id/nav_print"
            android:icon="@mipmap/ic_print_black_24dp"
            android:title="@string/action_print" />
    </group>

    <item android:title="@string/action_configure">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>
